--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
     </div>
 
     <div id="game-board">
-      <canvas id="canvas" width="500" height="700"></canvas>
+      <canvas id="canvas" width="800" height="600"></canvas>
     </div>
+      
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
